--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    Ismered a legcsípősebbet?
-Bemutatása
+    <h1>Ismered a legcsípősebbet?</h1>
+<h2>Bemutatása</h2>
 A paprika a burgonyafélék közé tartozó, Közép-Amerikából származó faj. Európába Kolumbusz orvosa hozta az első paprikát. A növény termése üreges bogyótermés, amely A- és C-vitaminban igen gazdag. Csípős ízét a kapszaicin nevű hatóanyag okozza. Jelentős fűszer- és gyógynövény. Magyarországon a XVI. század óta számos változatban termesztik.
-Fajtái
+<h2>Fajtái</h2>
 Öt faját, de sok változattal termesztik szerte a világon
 Közönséges paprika
 Cserjés paprika
 Kínai paprika
 Bogyós paprika
 Szőrös paprika
-Csípősség
+<h2>Csípősség</h2>
 A paprika csípősségének (kapszaicin tartalmának) mértékegysége a Scoville egység. Értéke 0 (édes) és 300 000 (ehetetlenül csípős) egység között változik. Egy paprika Scoville értéke azt az arányt mutatja, amely megadja, hogy a minta csípőssége milyen arányú hígításban nem érezhető már.
 
 Paprika Csípősség (Scoville érték)
