div szerkezet kialakítása

--- a/index.html
+++ b/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="paprika/paprika.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Ismered a legcsípősebbet?</h1>
-<h2>Bemutatása</h2>
-<p>A paprika a burgonyafélék közé tartozó, Közép-Amerikából származó faj. Európába Kolumbusz orvosa hozta az első paprikát. A növény termése üreges bogyótermés, amely A- és C-vitaminban igen gazdag. Csípős ízét a kapszaicin nevű hatóanyag okozza. Jelentős fűszer- és gyógynövény. Magyarországon a XVI. század óta számos változatban termesztik.</p>
-<h2>Fajtái</h2>
-Öt faját, de sok változattal termesztik szerte a világon
-Közönséges paprika
-Cserjés paprika
-Kínai paprika
-Bogyós paprika
-Szőrös paprika
-<h2>Csípősség</h2>
-<p>A paprika csípősségének (kapszaicin tartalmának) mértékegysége a Scoville egység. Értéke 0 (édes) és 300 000 (ehetetlenül csípős) egység között változik. Egy paprika Scoville értéke azt az arányt mutatja, amely megadja, hogy a minta csípőssége milyen arányú hígításban nem érezhető már.</p>
 
-Paprika Csípősség (Scoville érték)
-zöldpaprika 0
-a kevésbé csípős hazai paprikák 500-1000
-csípős paprikák 1500-2500
-a mexikói Serrano chili 5000-20000
+<body>
+    <div id="fokeret">
+        <div id="fejlec">
+            <h1>Ismered a legcsípősebbet?</h1>
+        </div>
+     <div id="tartalom">   
+    <h2>Bemutatása</h2>
+    <p>A paprika a burgonyafélék közé tartozó, Közép-Amerikából származó faj. Európába Kolumbusz orvosa hozta az első
+        paprikát. A növény termése üreges bogyótermés, amely A- és C-vitaminban igen gazdag. Csípős ízét a kapszaicin
+        nevű hatóanyag okozza. Jelentős fűszer- és gyógynövény. Magyarországon a XVI. század óta számos változatban
+        termesztik.</p>
+        <div id="menu">
+            <h2>Fajtái</h2>
+            Öt faját, de sok változattal termesztik szerte a világon
+            Közönséges paprika
+            Cserjés paprika
+            Kínai paprika
+            Bogyós paprika
+            Szőrös paprika
+        </div>
+    <h2>Csípősség</h2>
+    <p>A paprika csípősségének (kapszaicin tartalmának) mértékegysége a Scoville egység. Értéke 0 (édes) és 300 000
+        (ehetetlenül csípős) egység között változik. Egy paprika Scoville értéke azt az arányt mutatja, amely megadja,
+        hogy a minta csípőssége milyen arányú hígításban nem érezhető már.</p>
+
+    Paprika Csípősség (Scoville érték)
+    zöldpaprika 0
+    a kevésbé csípős hazai paprikák 500-1000
+    csípős paprikák 1500-2500
+    a mexikói Serrano chili 5000-20000
+    </div>
+    </div>
 </body>
+
 </html>
