--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         <div id="menu">
             <h2>Fajtái</h2>
             Öt faját, de sok változattal termesztik szerte a világon
-            Közönséges paprika
-            Cserjés paprika
-            Kínai paprika
-            Bogyós paprika
-            Szőrös paprika
+           <ul>
+            <li>Közönséges paprika</li>
+            <li>Cserjés paprika</li>
+           <li>Kínai paprika</li>
+            <li>Bogyós paprika</li>
+            <li>Szőrös paprika</li>
+            </ul>
         </div>
     <h2>Csípősség</h2>
     <p>A paprika csípősségének (kapszaicin tartalmának) mértékegysége a Scoville egység. Értéke 0 (édes) és 300 000
