lista képei és az egész táblázat

--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@
         (ehetetlenül csípős) egység között változik. Egy paprika Scoville értéke azt az arányt mutatja, amely megadja,
         hogy a minta csípőssége milyen arányú hígításban nem érezhető már.</p>
 
-    Paprika Csípősség (Scoville érték)
-    zöldpaprika 0
-    a kevésbé csípős hazai paprikák 500-1000
-    csípős paprikák 1500-2500
-    a mexikói Serrano chili 5000-20000
+        <table>
+            <tr>
+    <td>Paprika Csípősség</td> 
+    <td>(Scoville érték)</td>
+        </tr>
+    <tr><td>zöldpaprika</td><td id="zold"> 0</td></tr>
+<tr>
+   <td> a kevésbé csípős hazai paprikák</td> <td id="yellow">500-1000</td>
+</tr>
+<tr>
+    <td>csípős paprikák</td><td id="piros"> 1500-2500</td>
+</tr>
+<tr>
+    <td>a mexikói Serrano chili</td><td id="lila"> 5000-20000</td>
+</tr>
+</table>
     </div>
     </div>
 </body>
